2006-10-10	Richard van den Berg  <richard@vdberg.org>
	* Added note about rpl_malloc on AIX 5.3 with mhash
	* Include version.m4 in distribution tar file
	* No need for absolute $(srcdir) in configure
	* Use AC_CONFIG_FILES(files..) instead of AC_OUTPUT(files..)

2006-10-06	Richard van den Berg  <richard@vdberg.org>
	* Changed version to post-0.12
	* Added file locking for output files

2006-10-05	Richard van den Berg  <richard@vdberg.org>
	* Released version 0.12

2006-10-04	Richard van den Berg  <richard@vdberg.org>
	* Close database files earlier
	* Released version 0.12-rc2

2006-09-24	Richard van den Berg  <richard@vdberg.org>
	* Fixed filesize stored in postgres (SF bug #1177758)

2006-07-15	Richard van den Berg  <richard@vdberg.org>
	* Released version 0.12-rc1
	* Remove the use of NODE_ADD_CHILDREN, hopefully it is no longer needed
	* Added syntax changed from 10-manpages.dpatch
	* Added newlines as per SF bug #1461182
	* Added report_attributes group (Pablo Virolainen)

2006-06-13	Richard van den Berg  <richard@vdberg.org>
	* Fix stat type in report_tree() (Heiko Lehmann <hlehmann@fh-lausitz.de>)

2006-05-31	Richard van den Berg  <richard@vdberg.org>
	* Added support for posix_fadvice() (Pablo Virolainen)

2006-04-22	Richard van den Berg  <richard@vdberg.org>
	* Fix seg faults on OpenBSD (Axel Rau <Axel.Rau@Chaos1.DE>)

2006-04-22	Richard van den Berg  <richard@vdberg.org>
	* Fix mmap on HPUX (fredrik@soderblom.org patch 1474555)

2006-03-31	Richard van den Berg  <richard@vdberg.org>
	* Abort if aide.db does not have checksum when FORCEDBMD is used
	* Explain aide.conf and aide.db signing

2006-03-29	Richard van den Berg  <richard@vdberg.org>
	* Add spaces to error messages (Marc Haber)
	* Don't warn about rules referring to non-existent directories by default

2006-03-25	Richard van den Berg  <richard@vdberg.org>
	* Allow aide.db to be supplied on stdin (Pablo Virolainen)
	* Add patch to allow http/https/ftp URLs through libcurl (Pablo Virolainen)
