@@ -3,6 +3,7 @@
 	* Include version.m4 in distribution tar file
 	* No need for absolute $(srcdir) in configure
 	* Use AC_CONFIG_FILES(files..) instead of AC_OUTPUT(files..)
+	* Removed redundant targets from Makefile.am
 
 2006-10-06	Richard van den Berg  <richard@vdberg.org>
 	* Changed version to post-0.12
